# identity-example

./: README.md  rust-toolchain.toml
node/node/: Cargo.toml
node/pallets/example/: Cargo.toml
node/pallets/example/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
prover/: README.md  rust-toolchain.toml
prover/host/: Cargo.toml  metadata.scale
prover/host/src/: main.rs
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml
prover/methods/guest/src/: main.rs
