[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.14.0", git = "https://github.com/risc0/risc0", rev = "d83c7fef80d0ebb87bc86567447efee633a24c4e", features = ["prove"] }
serde = "1.0"
clap = "4.0"
tokio = { version = "1", features = ["full"] }
# subxt = { version = "0.25.0" }
subxt = { version = "0.25.0" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
bincode = "1.3.3"
