[package]
name = "hash"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.14.0", default-features = false,  git = "https://github.com/risc0/risc0", rev = "d83c7fef80d0ebb87bc86567447efee633a24c4e", features = [ "std" ] }
